# python-intro-final-task

./: .gitignore  README.md  geo_perser.py  main.py  pyproject.toml
fastq_analyzer/: .gitignore  config.py  requirements.txt  run.py  utils.py
fastq_analyzer/helpers/: __init__.py  adapter_cutter.py  fastq_file_reader.py  fastq_file_writer.py  quality_score_reader.py
fastq_analyzer/test_data/: some-other-adapter.txt
