[tool.poetry]
name = "fastq-analyzer"
version = "0.1.0"
description = ""
authors = ["alta7700 <alta7700@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = {extras = ["all"], version = "^5.4.1"}
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
